--- a/estilo.css
+++ b/estilo.css
@@ -87,19 +87,18 @@ h2{
 
 }
 .tabela-horizontal {
-    border-collapse: collapse; /* Remove espaçamento entre bordas */
-    width: 100%; /* Ajusta a largura da tabela */
+    border-collapse: collapse; 
+    width: 100%; 
 }
 
 .tabela-horizontal th, .tabela-horizontal td {
-    border: 1px solid #fa0303; /* Define a cor e espessura das linhas horizontais */
-    padding: 8px; /* Adiciona espaçamento interno nas células */
-    text-align: left; /* Alinha o texto à esquerda */
-    
+    border: 1px solid #fa0303; 
+    padding: 8px; 
+    text-align: left; 
 }
 
 .tabela-horizontal th {
-    background-color: #f2f2f2; /* Cor de fundo dos cabeçalhos */
+    background-color: #f2f2f2; 
 }
 
 .lista th {
@@ -107,9 +106,5 @@ h2{
     color: rgb(185, 1, 1);
     border: none;
     border-bottom: 2px solid rgb(185, 1, 1);
-   
-
  }
- color{
-    color: rgba(194, 6, 1, 0.195)
- }
+ 
